home page editition

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -28,3 +28,375 @@
     </div>
   </div>
 </section>
+
+<!-- about sectioln -->
+<section id='home-about-section'>
+  <div class='about-section-box'>
+    <div class='container text-center'>
+      <div class='heading-horizontal'>
+        <h5>Get To Know</h5>
+        <h2>About Me</h2>
+      </div>
+      <div class='row'>
+        <div class='col-md-12'>
+          <div class='about-section-textctr'>
+            <div class='container'>
+              <div class='row'>
+                <div class='col-md-12'>
+                  <p class='about-txt1'>Introduction :</p>
+                  <p class='about-txt2'>Hi, my name is Pramod and I am a Web and
+                    Mobile Application Developer. I have over 2 years of
+                    experience in this fields in which I have Developed many
+                    Android Applications like Fitness App, Video Status App,
+                    Live Cricket Score App apartfrom this I have developed many
+                    small Tools apps which is usefull daily tasks. I have
+                    bachlors degree of Bachlors Of Computer Application (BCA)
+                    from Sutex Bank College in India.
+                  </p>
+                </div>
+                <div class='col-md-12'><p class='about-txt1'>Android Application
+                    Development :</p>
+                  <p class='about-txt2'>I am familiar with Android studio, Java,
+                    Apis, Firebase and Notification, Background services,
+                    Android Libraries like Retrofit, Glide, Google Play Services
+                    and many more. Moreover, I can develop fully functional app
+                    using android widgets like Recyclerview, Gridview,
+                    Progressbar, ListView,Custom Dialogues, MySQLite database,
+                    Firebase Notification etc. So that's it I hope now you have
+                    clear idea about my work.
+                  </p>
+
+                </div>
+                <div class='col-md-12'>
+                  <p class='about-txt1'>Web Application Development :</p>
+                  <p class='about-txt2'>I am a MERN stack developer. MERN stands
+                    for MongoDB, Express, React, Node, after the four key
+                    technologies that make up the stack.
+                  </p>
+                </div>
+                <div class='col-md-12'>
+                  <p class='about-txt1'>Current Status :</p>
+                  <p class='about-txt2'>
+                    I am actively working on mobile and web application
+                    development as a freelancer as I am pursuing my studies at
+                    Conestoga College. I took a Mobile Application development
+                    course which gives me wide exposure to different
+                    technologies which enhance my skills and prepare me for
+                    getting a job in this competitive market.
+                  </p>
+                </div>
+                <div class='col-md-12'>
+                  <p class='about-txt1'>Future Goals :</p>
+                  <p class='about-txt2'>Learning new skills is part of a
+                    software developer’s role due to the frequent changes and
+                    advancements in technology and frameworks. However, just
+                    learning programming skills isn’t enough if you want to
+                    succeed and get ahead in your software developer’s career so
+                    I started working on other skills like communication skill,
+                    Management skill and many other skills which will give me
+                    advantage over others and stand out separately. I want to
+                    become a part of a organization where everyone share there
+                    ideas and turn those ideas into reality.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- our services -->
+<section id='home-service-section'>
+  <div class='service-block'>
+    <div class='container'>
+      <div class='heading-horizontal text-center'>
+        <h5>what I do</h5>
+        <h2>My Services</h2>
+      </div>
+      <div class='service-content'>
+        <div class='row'>
+          <div class='col-md-7'>
+            <div class='service-left-icon'>
+              <img
+                src='/Photos/service.png'
+                alt='service image'
+                class='img-fluid'
+              />
+              <div style='margin-left: 100px; font-size: 10px'>Icons made by
+                <a
+                  href='https://www.flaticon.com/authors/itim2101'
+                  title='itim2101'
+                >itim2101</a>
+                from
+                <a
+                  href='https://www.flaticon.com/'
+                  title='Flaticon'
+                >www.flaticon.com</a></div>
+            </div>
+          </div>
+          <div class='col-md-5'>
+            <div class='service-item-content'>
+
+              <div class='service-item'>
+                <div class='row'>
+                  <div class='col-md-2'>
+                    <div class='service-icons'>
+                      <i class='fa fa-globe'></i>
+                    </div>
+                  </div>
+                  <div class='col-md-10'>
+                    <div class='service-right-text'>
+                      <h5>Service 1</h5>
+                      <h4>Web Development</h4>
+                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Assumenda qui, animi natus consequatur quas
+                        repellendus voluptatum accusantium vel ullam laboriosam
+                        itaque voluptatibus recusandae, repudiandae alias
+                        reprehenderit iure beatae maiores molestiae.</p>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+
+              <div class='service-item'>
+                <div class='row'>
+                  <div class='col-md-2'>
+                    <div class='service-icons'>
+                      <i class='fa fa-android'></i>
+                    </div>
+                  </div>
+                  <div class='col-md-10'>
+                    <div class='service-right-text'>
+                      <h5>Service 2</h5>
+                      <h4>Android Application</h4>
+                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Assumenda qui, animi natus consequatur quas
+                        repellendus voluptatum accusantium vel ullam laboriosam
+                        itaque voluptatibus recusandae, repudiandae alias
+                        reprehenderit iure beatae maiores molestiae.</p>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+
+              <div class='service-item'>
+                <div class='row'>
+                  <div class='col-md-2'>
+                    <div class='service-icons'>
+                      <i class='fa fa-apple'></i>
+                    </div>
+                  </div>
+                  <div class='col-md-10'>
+                    <div class='service-right-text'>
+                      <h5>Service 3</h5>
+                      <h4>IOS Application</h4>
+                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Assumenda qui, animi natus consequatur quas
+                        repellendus voluptatum accusantium vel ullam laboriosam
+                        itaque voluptatibus recusandae, repudiandae alias
+                        reprehenderit iure beatae maiores molestiae.</p>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- portfolio -->
+<section id='home-portfolio-section'>
+  <div class='container'>
+    <div class='heading-horizontal text-center'>
+      <h5>FIND MY WORK</h5>
+      <h2>My WORK</h2>
+    </div>
+    <div class='row'>
+      <div class='col-md-4 col-sm-4'>
+        <div class='port-content'>
+          <img src='/Photos/appwork.jpg' class='img-fluid' />
+          <div class='port-overly'>
+            <h3>Android App</h3>
+            Photo by
+            <a
+              href='https://unsplash.com/@balazsketyi?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'
+            >Balázs Kétyi</a>
+            on
+            <a
+              href='https://unsplash.com/s/photos/application?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'
+            >Unsplash</a>
+
+          </div>
+        </div>
+      </div>
+      <div class='col-md-4 col-sm-4'>
+        <div class='port-content'>
+          <img src='/Photos/webwork.jpg' class='img-fluid' />
+          <div class='port-overly'>
+            <h3>Website Development</h3>
+            Photo by
+            <a
+              href='https://unsplash.com/@le_buzz?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'
+            >Le Buzz</a>
+            on
+            <a
+              href='https://unsplash.com/s/photos/website?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'
+            >Unsplash</a>
+
+          </div>
+        </div>
+      </div>
+      <div class='col-md-4 col-sm-4'>
+        <div class='port-content'>
+          <img src='/Photos/ioswork.jpg' class='img-fluid' />
+          <div class='port-overly'>
+            <h3>Android App</h3>
+            Photo by
+            <a
+              href='https://unsplash.com/@pemmax?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'
+            >Przemyslaw Marczynski</a>
+            on
+            <a
+              href='https://unsplash.com/s/photos/ios-application?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'
+            >Unsplash</a>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Contact -->
+<section id='home-contact-section'>
+  <div class='card-container'>
+    <div class='container'>
+      <div class='heading-horizontal text-center'>
+        <h5>Who i am</h5>
+        <h2>Get In Touch</h2>
+      </div>
+      <div class='row'>
+        <div class='col-md-6 col-sm-12'>
+          <div class='aboutus-details'>
+            <h2>Get In Touch</h2>
+            <p>Reach out to me on below addresses.
+            </p>
+            <div class='row'>
+              <div class='col-md-6'>
+                <div class='about-datalist'>
+                  <h5><i class='fa fa-dote'></i>Gujarat,India</h5>
+                  <ul>
+                    <li><i class='fa fa-mobile'></i>+91 98524 45854</li>
+                    <li><i class='fa fa-envelope'></i>support@me.com</li>
+                    <li>
+                      <i class='fa fa-map-marker'></i><span>s/101 king street
+                        varachha garvi
+                        <br />
+                        gujarat india</span>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class='col-md-6 col-sm-12'>
+                <div class='about-datalist'>
+                  <h5>Waterloo, Canada</h5>
+                  <ul>
+                    <li><i class='fa fa-mobile'></i>+201 98525 4585</li>
+                    <li><i class='fa fa-envelope'></i>support@me.com</li>
+                    <li>
+                      <i class='fa fa-map-marker'></i><span>s/101 king street
+                        varachha garvi
+                        <br />
+                        gujarat india</span>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class='about-scoicon'>
+              <ul class='socialicon'>
+                <li>
+                  <a href='#'><i class='fa fa-facebook'></i></a>
+                </li>
+                <li>
+                  <a href='#'><i class='fa fa-google-plus'></i></a>
+                </li>
+                <li>
+                  <a href='#'><i class='fa fa-twitter'></i></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class='col-md-6'>
+          <div class='form-box'>
+            <h3>Contact Me</h3>
+            <p>
+              Fill below form to get in touch with me.
+            </p>
+            <div class='container'>
+              <div class='row'>
+                <div class='col-md-6'>
+                  <input
+                    class='form-control form-control-sm'
+                    type='text'
+                    placeholder='Your Name'
+                  />
+                </div>
+                <div class='col-md-6'>
+                  <input
+                    class='form-control form-control-sm'
+                    type='email'
+                    placeholder='Your Email'
+                  />
+                </div>
+                <div class='col-md-6'>
+                  <input
+                    class='form-control form-control-sm'
+                    type='text'
+                    placeholder='Your Company Name'
+                  />
+                </div>
+                <div class='col-md-6'>
+                  <input
+                    class='form-control form-control-sm'
+                    type='email'
+                    placeholder='Your Contact Number'
+                  />
+                </div>
+                <div class='col-md-12'>
+                  <textarea
+                    class='form-control'
+                    placeholder='Write Discription'
+                    id='exampleFormControlTextarea1'
+                    rows='8'
+                  ></textarea>
+                </div>
+                <div class='col-md-12'>
+                  <div class='form-btn'>
+                    <button type='button' class='btn btn-general'>
+                      &nbsp; Submit &nbsp;
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
