--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,7 +24,6 @@ section {
   background-color: #fbfbfb;
 }
 #error-section,
-#home-section,
 #about-section,
 #contact-section,
 #service-section,
@@ -78,7 +77,22 @@ color: #ffb633 !important;
   font-weight: 700;
   margin-left: 50px;
 }
-
+/* heading */
+.heading-horizontal h5 {
+  color: #f4c613;
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase;
+  word-spacing: 9px;
+  display: inline-block;
+}
+.heading-horizontal h2 {
+  min-width: 220px;
+  font-size: 42px;
+  font-weight: 100;
+  line-height: 45px;
+  padding-bottom: 30px;
+}
 /* 404 page not found */
 .error-heading h1 {
   position: absolute;
@@ -95,7 +109,7 @@ color: #ffb633 !important;
 
 .home-section-box {
   display: table;
-  height: 100%;
+  height: 90%;
   width: 100%;
 }
 
@@ -189,6 +203,10 @@ color: #ffb633 !important;
 /* about section */
 
 /* left section text */
+#home-about-section{
+  padding: 50px 0 50px 0;
+  background-color: white;
+}
 .about-section-textctr,
 .about-section2-textctr {
   margin-top: 20px;
@@ -211,6 +229,9 @@ color: #ffb633 !important;
 }
 
 /* Contact me css */
+#home-contact-section{
+    padding: 50px 0 100px 0;
+}
 .aboutus-details {
   position: relative;
   top: 50%;
@@ -358,6 +379,9 @@ ul.socialicon li:nth-child(3) a:hover {
 }
 
 /* Service section styling */
+#home-service-section{
+ padding: 50px 0px 50px 0px;
+}
 .service-left-icon {
   margin-top: 50px;
 }
@@ -438,6 +462,10 @@ ul.socialicon li:nth-child(3) a:hover {
 }
 
 /* portfolio styling */
+#home-portfolio-section{
+  padding: 50px 0 50px 0;
+  background-color: white;
+}
 #portfolio-section {
   padding-bottom: 20px;
 }
