--- a/views/services.hbs
+++ b/views/services.hbs
@@ -10,7 +10,7 @@
                 alt='service image'
                 class='img-fluid'
               />
-              <div style="margin-left: 100px; font-size: 10px">Icons made by
+              <div style='margin-left: 100px; font-size: 10px'>Icons made by
                 <a
                   href='https://www.flaticon.com/authors/itim2101'
                   title='itim2101'
@@ -24,73 +24,25 @@
           </div>
           <div class='col-md-5'>
             <div class='service-item-content'>
-
-              <div class='service-item'>
-                <div class='row'>
-                  <div class='col-md-2'>
-                    <div class='service-icons'>
-                      <i class='fa fa-globe'></i>
+              {{#each data}}
+                <div class='service-item'>
+                  <div class='row'>
+                    <div class='col-md-2'>
+                      <div class='service-icons'>
+                        <i class='fa fa-globe'></i>
+                      </div>
                     </div>
-                  </div>
-                  <div class='col-md-10'>
-                    <div class='service-right-text'>
-                      <h5>Service 1</h5>
-                      <h4>Web Development</h4>
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing
-                        elit. Assumenda qui, animi natus consequatur quas
-                        repellendus voluptatum accusantium vel ullam laboriosam
-                        itaque voluptatibus recusandae, repudiandae alias
-                        reprehenderit iure beatae maiores molestiae.</p>
-                    </div>
+                    <div class='col-md-10'>
+                      <div class='service-right-text'>
+                        <h5>{{ this.title1 }}</h5>
+                        <h4>{{ this.title2 }}</h4>
+                        <p>{{ this.description }}</p>
+                      </div>
 
+                    </div>
                   </div>
                 </div>
-              </div>
-
-              <div class='service-item'>
-                <div class='row'>
-                  <div class='col-md-2'>
-                    <div class='service-icons'>
-                      <i class='fa fa-android'></i>
-                    </div>
-                  </div>
-                  <div class='col-md-10'>
-                    <div class='service-right-text'>
-                      <h5>Service 2</h5>
-                      <h4>Android Application</h4>
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing
-                        elit. Assumenda qui, animi natus consequatur quas
-                        repellendus voluptatum accusantium vel ullam laboriosam
-                        itaque voluptatibus recusandae, repudiandae alias
-                        reprehenderit iure beatae maiores molestiae.</p>
-                    </div>
-
-                  </div>
-                </div>
-              </div>
-
-              <div class='service-item'>
-                <div class='row'>
-                  <div class='col-md-2'>
-                    <div class='service-icons'>
-                      <i class='fa fa-apple'></i>
-                    </div>
-                  </div>
-                  <div class='col-md-10'>
-                    <div class='service-right-text'>
-                      <h5>Service 3</h5>
-                      <h4>IOS Application</h4>
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing
-                        elit. Assumenda qui, animi natus consequatur quas
-                        repellendus voluptatum accusantium vel ullam laboriosam
-                        itaque voluptatibus recusandae, repudiandae alias
-                        reprehenderit iure beatae maiores molestiae.</p>
-                    </div>
-
-                  </div>
-                </div>
-              </div>
-
+              {{/each}}
             </div>
 
           </div>
