--- a/views/index.hbs
+++ b/views/index.hbs
@@ -35,6 +35,7 @@
       <div class='heading-horizontal'>
         <h5>Get To Know</h5>
         <h2>About Me</h2>
+          <div class="border-horizontal">&nbsp;</div>
       </div>
       <div class='row'>
         <div class='col-md-12'>
@@ -65,6 +66,7 @@
       <div class='heading-horizontal text-center'>
         <h5>what I do</h5>
         <h2>My Services</h2>
+           <div class="border-horizontal">&nbsp;</div>
       </div>
       <div class='service-content'>
         <div class='row'>
@@ -124,6 +126,7 @@
     <div class='heading-horizontal text-center'>
       <h5>FIND MY WORK</h5>
       <h2>My WORK</h2>
+         <div class="border-horizontal">&nbsp;</div>
     </div>
     <div class='row'>
       {{#each data.mportfolioData}}
@@ -151,6 +154,7 @@
       <div class='heading-horizontal text-center'>
         <h5>Who i am</h5>
         <h2>Get In Touch</h2>
+           <div class="border-horizontal">&nbsp;</div>  
       </div>
       <div class='row'>
         <div class='col-md-6 col-sm-12'>
