--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -38,6 +38,7 @@ section {
   height: 90px;
   z-index: 999;
   padding: 0 !important;
+  padding-right: 40px !important;
   background-color: white !important;
 }
 .nav-item{
@@ -72,27 +73,36 @@ color: #ffb633 !important;
   border-bottom: 1px solid #ffb633 ;   
 }
  .navbar-brand {
-  color: #fbd31a !important;
+  color: #ffb633 !important;
   font-size: 25px !important;
   font-weight: 700;
   margin-left: 50px;
 }
 /* heading */
 .heading-horizontal h5 {
-  color: #f4c613;
+  color: #ffc400;
   font-size: 14px;
   font-weight: 500;
   text-transform: uppercase;
   word-spacing: 9px;
   display: inline-block;
 }
+.border-horizontal{
+  border-top:1px solid #ffc400;
+  display: inline-block;
+  width: 250px;
+  padding: 0px 0 10px 0;
+
+}
 .heading-horizontal h2 {
   min-width: 220px;
   font-size: 42px;
   font-weight: 100;
   line-height: 45px;
-  padding-bottom: 30px;
+  padding-bottom: 5px;
+
 }
+
 /* 404 page not found */
 .error-heading h1 {
   position: absolute;
