--- a/views/contactme.hbs
+++ b/views/contactme.hbs
@@ -93,7 +93,7 @@
                 <div class='col-md-12'>
                   <textarea
                     class='form-control'
-                    placeholder='Write Discription'
+                    placeholder='Write Description'
                     id='exampleFormControlTextarea1'
                     rows='8'
                   ></textarea>
