--- a/views/index.hbs
+++ b/views/index.hbs
@@ -28,6 +28,7 @@
     </div>
   </div>
 </section>
+
 <!-- about sectioln -->
 <section id='home-about-section'>
   <div class='about-section-box'>
@@ -248,7 +249,7 @@
                 <div class='col-md-12'>
                   <textarea
                     class='form-control'
-                    placeholder='Write Discription'
+                    placeholder='Write Description'
                     id='exampleFormControlTextarea1'
                     rows='8'
                   ></textarea>
