--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -63,6 +63,13 @@
     {{{body}}}
      <section>
  <footer id="footer">
+   <div class="footer-links text-center">
+ <a href='https://github.com/pramodvg' target="_blank"><i class='fa fa-github'></i>Github</a>
+  <a href='https://www.linkedin.com/in/pramod-vaghasia-2641a919a' target="_blank"><i class='fa fa-linkedin'></i>LinkedIn</a>
+   </div>
+   <div>
+
+   </div>
       <p>
         Copyright @ 2021 All Rights Reserved By <strong>Pramod Vaghasia.</strong>
       </p>
