--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,7 +5,8 @@
     <meta charset='utf-8' />
     <meta http-equiv='X-UA-Compatible' content='IE-edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1' />
-    {{! online icon }}
+
+    {{! online icon https://fontawesome.com/v4.7/icons/}}
     <link
       rel='stylesheet'
       href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'
@@ -76,6 +77,7 @@
     </footer>
 
     </section> 
+    {{!-- bootstrap jquery https://getbootstrap.com/ --}}
     <script
       type='text/javascript'
       src='/stylesheets/jquery/jquery-min.js'
