--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -67,7 +67,8 @@ ul.navbar-nav > li {
   -ms-transition: 0.1s linear;
   -o-transition: 0.1s linear;
 }
-/* https://www.w3schools.com/cssref/sel_hover.asp */
+
+/*  https://www.w3schools.com/cssref/sel_hover.asp  */
 .navbar-nav a:hover {
   color: #ffb633 !important;
   border-bottom: 1px solid #ffb633;
@@ -197,7 +198,7 @@ ul.navbar-nav > li {
 }
 
 /* hire me button */
-/* https://www.w3schools.com/cssref/sel_hover.asp */
+/*  https://www.w3schools.com/cssref/sel_hover.asp  */
 .home-btn-hire:hover {
   transition: all 200ms linear;
   border: 2px solid #ffb633;
@@ -314,7 +315,7 @@ ul.navbar-nav > li {
 .about-scoicon ul.socialicon {
   margin: 0 !important;
 }
-/* https://www.w3schools.com/cssref/sel_hover.asp */
+/*  https://www.w3schools.com/cssref/sel_hover.asp  */
 ul.socialicon li:nth-child(1) a:hover {
   background: #3b5998;
   color: white;
@@ -372,7 +373,7 @@ ul.socialicon li:nth-child(3) a:hover {
   -ms-transition: all 400ms;
   -o-transition: all 400ms;
 }
-/* https://www.w3schools.com/cssref/sel_hover.asp */
+/*  https://www.w3schools.com/cssref/sel_hover.asp  */
 .form-btn button:hover {
   background-color: white;
   border: 2px solid #ffb633;
@@ -383,7 +384,7 @@ ul.socialicon li:nth-child(3) a:hover {
   -ms-transition: 200ms linear;
   -o-transition: 200ms linear;
 }
-/* remove button default border on clicked */
+/*  remove button default border on clicked  */
 .btn:focus,
 .btn:active:focus,
 .btn.active:focus {
@@ -443,8 +444,10 @@ ul.socialicon li:nth-child(3) a:hover {
   -o-transition: all 400ms ease-in-out;
 }
 
-/* hover effect on services right */
-/* https://www.w3schools.com/cssref/sel_hover.asp */
+/*  hover effect on services right  */
+
+/*  https://www.w3schools.com/cssref/sel_hover.asp  */
+
 .service-item:hover i {
   color: #ffc400;
   transform: translateX(-30%);
@@ -462,7 +465,7 @@ ul.socialicon li:nth-child(3) a:hover {
   color: black;
 }
 
-/* Footer */
+/* Footer  section */
 #footer {
   background-color: white;
   padding: 25px;
@@ -541,8 +544,8 @@ a {
   font-size: 10px;
 }
 
-/* /* hover effect on services right */
-*/ .port-content:hover .port-overly {
+/* hover effect on services right */
+.port-content:hover .port-overly {
   height: 100%;
 }
 .port-content:hover img {
