--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,11 +5,12 @@
       <div class='row'>
         <div class='col-md-6'>
           <div class='home-section-textctr'>
+          
             <p class='home-txt1'>Hello, I'am Pramod</p>
-            <p class='home-txt2'>Full Stack <br /><strong>Developer</strong></p>
+            <p class='home-txt2' id="sentdata">Full Stack <br /><strong>Developer</strong></p>
             <p class='home-txt3'>Android Application And <br />Web Developer</p>
-            <form action='/contact' method='GET'>
-              <button class='home-btn-hire'>Hire Me</button>
+            <form action='/contact' name="submit" method='POST'>
+              <button class='home-btn-hire' id="hirebtn" name="submit" type="submit">Hire Me</button>
             </form>
 
           </div>
