--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -78,6 +78,8 @@
 
     </section> 
     {{!-- bootstrap jquery https://getbootstrap.com/ --}}
+     <script src="https://js.pusher.com/7.0/pusher.min.js"></script>
+
     <script
       type='text/javascript'
       src='/stylesheets/jquery/jquery-min.js'
@@ -86,6 +88,7 @@
       type='text/javascript'
       src='/stylesheets/bootstrap/js/bootstrap.min.js'
     ></script>
+     <script src="/scripts/pusherindex.js"></script>
 
   </body>
 </html>
