--- a/views/contactme.hbs
+++ b/views/contactme.hbs
@@ -56,61 +56,61 @@
         </div>
         <div class='col-md-6'>
           <div class='form-box'>
-            <h3 id="mdatax">Contact Me</h3>
+            <h3 id='mdatax'>Contact Me</h3>
             <p>
               Fill below form to get in touch with me.
             </p>
-            <form action="/home" id="submit-form" method="POST">
-  <div class='container'>
-              <div class='row'>
-                <div class='col-md-6'>
-                  <input
-                    name='mName'
-                    class='form-control form-control-sm'
-                    type='text'
-                    placeholder='Your Name'
-                  />
-                </div>
-                <div class='col-md-6'>
-                  <input
-                    class='form-control form-control-sm'
-                    type='email'
-                    placeholder='Your Email'
-                  />
-                </div>
-                <div class='col-md-6'>
-                  <input
-                    class='form-control form-control-sm'
-                    type='text'
-                    placeholder='Your Company Name'
-                  />
-                </div>
-                <div class='col-md-6'>
-                  <input
-                    class='form-control form-control-sm'
-                    type='email'
-                    placeholder='Your Contact Number'
-                  />
-                </div>
-                <div class='col-md-12'>
-                  <textarea
-                    class='form-control'
-                    placeholder='Write Description'
-                    id='exampleFormControlTextarea1'
-                    rows='8'
-                  ></textarea>
-                </div>
-                <div class='col-md-12'>
-                  <div class='form-btn'>
-                    <button type='submit' class='btn btn-general'>
-                      &nbsp; Submit &nbsp;
-                    </button>
+            <form action='/' id='submit-form' method='POST'>
+              <div class='container'>
+                <div class='row'>
+                  <div class='col-md-6'>
+                    <input
+                      name='mName'
+                      class='form-control form-control-sm'
+                      type='text'
+                      placeholder='Your Name'
+                    />
+                  </div>
+                  <div class='col-md-6'>
+                    <input
+                      class='form-control form-control-sm'
+                      type='email'
+                      placeholder='Your Email'
+                    />
+                  </div>
+                  <div class='col-md-6'>
+                    <input
+                      class='form-control form-control-sm'
+                      type='text'
+                      placeholder='Your Company Name'
+                    />
+                  </div>
+                  <div class='col-md-6'>
+                    <input
+                      class='form-control form-control-sm'
+                      type='email'
+                      placeholder='Your Contact Number'
+                    />
+                  </div>
+                  <div class='col-md-12'>
+                    <textarea
+                      class='form-control'
+                      placeholder='Write Description'
+                      id='exampleFormControlTextarea1'
+                      rows='8'
+                    ></textarea>
+                  </div>
+                  <div class='col-md-12'>
+                    <div class='form-btn'>
+                      <button type='submit' class='btn btn-general'>
+                        &nbsp; Submit &nbsp;
+                      </button>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
             </form>
-          
+
           </div>
         </div>
       </div>
